# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(
    "//nisaba/scripts/utils:grammars.bzl",
    "nisaba_compile_multi_grm_py",
    "nisaba_grm_textproto_test",
)

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit/languages:__subpackages__",
    ],
)

licenses(["notice"])

LANGUAGES = [
    "hi",
    "kn",
    "ml",
    "ta",
    "te",
]

# Compile PSA grms. Eg:
# //nisaba/scripts/natural_translit/romanization:hi_iso_psac
# //nisaba/scripts/natural_translit/romanization:hi_iso_psaf

[
    nisaba_compile_multi_grm_py(
        name = "%s_iso_psac" % language,
        outs = {
            "byte": "%s_iso_psac.far" % language,
            "utf8": "%s_iso_psac_utf8.far" % language,
        },
        visibility = ["//visibility:public"],
        deps = [
            "@org_opengrm_pynini//pynini",
            "//nisaba/scripts/natural_translit/language_params:%s" % language,
        ],
    )
    for language in LANGUAGES
]

[
    nisaba_compile_multi_grm_py(
        name = "%s_iso_psaf" % language,
        outs = {
            "byte": "%s_iso_psaf.far" % language,
            "utf8": "%s_iso_psaf_utf8.far" % language,
        },
        visibility = ["//visibility:public"],
        deps = [
            "@org_opengrm_pynini//pynini",
            "//nisaba/scripts/natural_translit/language_params:%s" % language,
        ],
    )
    for language in LANGUAGES
]

# Compile NAT grms. Eg: //nisaba/scripts/natural_translit/romanization:hi_iso_nat

[
    nisaba_compile_multi_grm_py(
        name = "%s_iso_nat" % language,
        outs = {
            "byte": "%s_iso_nat.far" % language,
            "utf8": "%s_iso_nat_utf8.far" % language,
        },
        visibility = ["//visibility:public"],
        deps = [
            "@org_opengrm_pynini//pynini",
            "//nisaba/scripts/natural_translit/language_params:%s" % language,
        ],
    )
    for language in LANGUAGES
]

# Ordinary byte tests.
[
    nisaba_grm_textproto_test(
        name = "%s_iso_psac_test" % language,
    )
    for language in LANGUAGES
]

[
    nisaba_grm_textproto_test(
        name = "%s_iso_psaf_test" % language,
    )
    for language in LANGUAGES
]

[
    nisaba_grm_textproto_test(
        name = "%s_iso_nat_test" % language,
    )
    for language in LANGUAGES
]

# UTF-8 tests.
[
    nisaba_grm_textproto_test(
        name = "%s_iso_psac_utf8_test" % language,
        textproto = "testdata/%s_iso_psac.textproto" % language,
        token_type = "utf8",
    )
    for language in LANGUAGES
]

[
    nisaba_grm_textproto_test(
        name = "%s_iso_psaf_utf8_test" % language,
        textproto = "testdata/%s_iso_psaf.textproto" % language,
        token_type = "utf8",
    )
    for language in LANGUAGES
]

[
    nisaba_grm_textproto_test(
        name = "%s_iso_nat_utf8_test" % language,
        textproto = "testdata/%s_iso_nat.textproto" % language,
        token_type = "utf8",
    )
    for language in LANGUAGES
]
