# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Script building modules.

# Required for `pycountry` below.
load("@pip_deps//:requirements.bzl", "requirement")

load("@rules_python//python:py_library.bzl", "py_library")

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit:__subpackages__",
    ],
)

licenses(["notice"])

py_library(
    name = "char",
    srcs = ["char.py"],
    deps = [
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:inventory",
        "//nisaba/scripts/natural_translit/utils:list_op",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "grapheme",
    srcs = ["grapheme.py"],
    deps = [
        "//nisaba/scripts/natural_translit/utils:expression",
        "//nisaba/scripts/natural_translit/utils:feature",
        requirement("pycountry"),
    ],
)

py_test(
    name = "grapheme_test",
    srcs = ["grapheme_test.py"],
    main = "grapheme_test.py",
    deps = [
        ":grapheme",
        "@io_abseil_py//absl/testing:absltest",
    ],
)
