# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Script building modules.

# Required for `pycountry` below.
load("@pip_deps//:requirements.bzl", "requirement")

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit:__subpackages__",
    ],
)

licenses(["notice"])

py_library(
    name = "char",
    srcs = ["char.py"],
    deps = [
        "//nisaba/scripts/natural_translit/utils:alignment",
        "//nisaba/scripts/natural_translit/utils:fst_list",
        "//nisaba/scripts/natural_translit/utils:inventory",
        "//nisaba/scripts/natural_translit/utils:rewrite_functions",
        "//nisaba/scripts/natural_translit/utils:type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "grapheme",
    srcs = ["grapheme.py"],
    deps = [
        "//nisaba/scripts/natural_translit/phonology:phonological_symbol",
        "//nisaba/scripts/natural_translit/phonology/features:language",
        "//nisaba/scripts/natural_translit/utils:feature",
        "//nisaba/scripts/natural_translit/utils:type_op",
        requirement("pycountry"),
    ],
)

py_test(
    name = "grapheme_test",
    srcs = ["grapheme_test.py"],
    main = "grapheme_test.py",
    deps = [
        ":grapheme",
        "//nisaba/scripts/natural_translit/utils:test_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)
