# Copyright 2022 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


package(default_visibility = [
    "//nisaba/scripts/natural_translit:__subpackages__",
])

licenses(["notice"])

py_library(
    name = "list_op",
    srcs = ["list_op.py"],
    deps = [
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "inventory",
    srcs = ["inventory.py"],
    deps = [
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "alignment",
    srcs = ["alignment.py"],
    deps = [
        ":list_op",
        "@org_opengrm_pynini//pynini",
        "@org_opengrm_pynini//pynini/lib:byte",
    ],
)

py_test(
    name = "alignment_test_py",
    srcs = ["alignment_test.py"],
    main = "alignment_test.py",
    deps = [
        ":alignment",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "rewrite_functions",
    srcs = ["rewrite_functions.py"],
    deps = [
        ":alignment",
        ":concat",
        ":list_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "concat",
    srcs = ["concat.py"],
    deps = [
        ":alignment",
        "@org_opengrm_pynini//pynini",
    ],
)
