# Copyright 2024 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:py_library.bzl", "py_library")

package(
    default_applicable_licenses = [
    ],
    default_visibility = [
        "//nisaba/scripts/natural_translit:__subpackages__",
        "//nlp/sweet/saline:__subpackages__",
    ],
)

licenses(["notice"])

py_library(
    name = "inventory",
    srcs = ["inventory.py"],
    deps = [
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "inventory2",
    srcs = ["inventory2.py"],
    deps = [
        ":log_op",
        ":type_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "inventory2_test",
    srcs = ["inventory2_test.py"],
    main = "inventory2_test.py",
    deps = [
        ":inventory2",
        ":type_op",
        "@io_abseil_py//absl/testing:absltest",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "fst_list",
    srcs = ["fst_list.py"],
    deps = [
        ":type_op",
        "//nisaba/scripts/utils:rewrite",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "fst_list_test",
    srcs = ["fst_list_test.py"],
    main = "fst_list_test.py",
    deps = [
        ":fst_list",
        ":test_op",
        ":type_op",
        "@io_abseil_py//absl/testing:absltest",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "alignment",
    srcs = ["alignment.py"],
    deps = [
        ":fst_list",
        "@org_opengrm_pynini//pynini",
        "@org_opengrm_pynini//pynini/lib:byte",
    ],
)

py_test(
    name = "alignment_test",
    srcs = ["alignment_test.py"],
    main = "alignment_test.py",
    deps = [
        ":alignment",
        "//nisaba/scripts/utils:test_util",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "rewrite_functions",
    srcs = ["rewrite_functions.py"],
    deps = [
        ":alignment",
        ":concat",
        ":fst_list",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "concat",
    srcs = ["concat.py"],
    deps = [
        ":alignment",
        "@org_opengrm_pynini//pynini",
    ],
)

py_library(
    name = "log_op",
    srcs = ["log_op.py"],
    deps = [
        "@io_abseil_py//absl/logging",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "log_op_test",
    srcs = ["log_op_test.py"],
    main = "log_op_test.py",
    deps = [
        ":log_op",
        ":type_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "type_op",
    srcs = ["type_op.py"],
    deps = [
        ":log_op",
        "@org_opengrm_pynini//pynini",
    ],
)

py_test(
    name = "type_op_test",
    srcs = ["type_op_test.py"],
    main = "type_op_test.py",
    deps = [
        ":test_op",
        ":type_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "feature",
    srcs = ["feature.py"],
    deps = [
        ":inventory2",
        ":log_op",
        ":type_op",
    ],
)

py_test(
    name = "feature_test",
    srcs = ["feature_test.py"],
    main = "feature_test.py",
    deps = [
        ":feature",
        ":test_op",
        ":type_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "symbol",
    srcs = ["symbol.py"],
    deps = [
        ":feature",
        ":inventory2",
        ":log_op",
        ":type_op",
    ],
)

py_test(
    name = "symbol_test",
    srcs = ["symbol_test.py"],
    main = "symbol_test.py",
    deps = [
        ":symbol",
        ":test_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "expression",
    srcs = ["expression.py"],
    deps = [
        ":feature",
        ":inventory2",
        ":log_op",
        ":symbol",
        ":type_op",
    ],
)

py_test(
    name = "expression_test",
    srcs = ["expression_test.py"],
    main = "expression_test.py",
    deps = [
        ":expression",
        ":symbol",
        ":test_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "operation",
    srcs = ["operation.py"],
    deps = [
        ":inventory2",
        ":type_op",
    ],
)

py_test(
    name = "operation_test",
    srcs = ["operation_test.py"],
    main = "operation_test.py",
    deps = [
        ":operation",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "alignment2",
    srcs = ["alignment2.py"],
    deps = [
        ":expression",
        ":operation",
        ":type_op",
    ],
)

py_test(
    name = "alignment2_test",
    srcs = ["alignment2_test.py"],
    main = "alignment2_test.py",
    deps = [
        ":alignment2",
        ":expression",
        ":operation",
        ":symbol",
        ":test_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)

py_library(
    name = "test_op",
    srcs = ["test_op.py"],
    srcs_version = "PY3",
    deps = [
        ":expression",
        ":feature",
        ":type_op",
        "@io_abseil_py//absl/testing:absltest",
    ],
)
