# Copyright 2023 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Language-agnostic or common components for Arabic script languages.

load("//nisaba/scripts/utils:letter_languages.bzl", "setup_letter_languages")
load(
    "//nisaba/scripts/utils:unicode_strings_to_tsv.bzl",
    "component_tsv",
    "components_tsv_local",
)

package(
    default_applicable_licenses = [
    ],
    default_visibility = ["//nisaba/scripts/abjad_alphabet:__subpackages__"],
)

licenses(["notice"])

exports_files(glob([
    "*.textproto",
]))

setup_letter_languages(name = "ArabChars")

component_tsv(
    name = "nfc",
    text_protos = [":nfc.textproto"],
)

component_tsv(
    name = "reversible_roman",
    text_protos = [":reversible_roman.textproto"],
)

component_tsv(
    name = "presentation_forms",
    text_protos = [":presentation_forms.textproto"],
)

components_tsv_local(names = ["visual_norm"])
