# Copyright 2021 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Script definitions for Bengali.

load(
    "//nisaba/scripts/utils:unicode_strings_to_tsv.bzl",
    "empty_components_tsv",
)
load(
    "//nisaba/scripts/brahmic:components_tsv.bzl",
    "component_tsv_with_defaults",
    "components_tsv_from_common",
    "components_tsv_local",
    "components_tsv_local_with_common",
)

package(default_visibility = ["//nisaba/scripts/brahmic:__subpackages__"])

licenses(["notice"])

exports_files(["uname_prefix.textproto"])

empty_components_tsv(
    name = "empties",
    empty_component_names = [
        "accept",
        "standalone",
        "subjoined_consonant",
        "vowel_length_sign",
    ],
)

components_tsv_from_common(names = [
    "coda",
    "inherent_vowel",
    "virama",
])

components_tsv_local_with_common(names = [
    "consonant",
    "preserve",
])

components_tsv_local(names = [
    "dead_consonant",
    "nfc",
    "visual_rewrite",
])

component_tsv_with_defaults(
    name = "vowel",
    more_text_protos_from = [
        "//nisaba/scripts/brahmic/data/Beng/sat",
        "//nisaba/scripts/brahmic/data/Beng/trp",
    ],
)

component_tsv_with_defaults(
    name = "vowel_sign",
    more_text_protos_from = [
        "//nisaba/scripts/brahmic/data/Beng/sat",
    ],
)
