# Copyright 2022 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Script definitions for Bengali.

load(
    "//nisaba/scripts/brahmic/data:components_tsv.bzl",
    "components_tsv_from_common",
    "components_tsv_local",
    "components_tsv_local_with_common",
    "empty_components_tsv",
)

package(default_visibility = ["//nisaba/scripts/brahmic:__subpackages__"])

licenses(["notice"])

exports_files(["uname_prefix.textproto"])

empty_components_tsv(names = [
    "accept",
    "standalone",
    "subjoined_consonant",
    "vowel_length_sign",
])

components_tsv_from_common(names = [
    "coda",
    "inherent_vowel",
    "virama",
])

components_tsv_local_with_common(names = [
    "consonant",
    "preserve",
])

components_tsv_local(names = [
    "dead_consonant",
    "nfc",
    "visual_rewrite",
])

components_tsv_local_with_common(
    more_text_protos_from = [
        "//nisaba/scripts/brahmic/data/Beng/sat",
        "//nisaba/scripts/brahmic/data/Beng/trp",
    ],
    names = ["vowel"],
)

components_tsv_local_with_common(
    more_text_protos_from = ["//nisaba/scripts/brahmic/data/Beng/sat"],
    names = ["vowel_sign"],
)
