# Copyright 2021 Nisaba Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Script definitions for Lontara (Buginese).

load(
    "//nisaba/scripts/utils:unicode_strings_to_tsv.bzl",
    "component_tsv",
    "empty_components_tsv",
)

package(default_visibility = ["//nisaba/scripts/brahmic:__subpackages__"])

licenses(["notice"])

empty_components_tsv(
    name = "empties",
    empty_component_names = [
        "accept",
        "coda",
        "dead_consonant",
        "nfc",
        "preserve",
        "standalone",
        "subjoined_consonant",
        "virama",
        "visual_rewrite",
        "vowel_length_sign",
    ],
)

component_tsv(
    name = "inherent_vowel",
    text_protos = ["//nisaba/scripts/brahmic/data/common:inherent_vowel.textproto"],
)

component_tsv(
    name = "consonant",
    text_protos = [":consonant.textproto"],
)

component_tsv(
    name = "vowel",
    text_protos = [":vowel.textproto"],
)

component_tsv(
    name = "vowel_sign",
    text_protos = [":vowel_sign.textproto"],
)
